runtime/pavex_macros/tests/methods/fail/empty_impl.rs
pub struct A;

#[pavex::methods]
impl A {
}

fn main() {}