runtime/pavex_macros/tests/methods/fail/empty_impl.stderr
error: `#[pavex::methods]` is used to provide context for Pavex attributes on methods (e.g., `#[pavex::get]`, `#[pavex::post]`, `#[pavex::error_handler]`, etc.).
       This `impl` block contains no methods with Pavex attributes, so `#[pavex::methods]` is unnecessary.
 --> tests/methods/fail/empty_impl.rs:3:1
  |
3 | #[pavex::methods]
  | ^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `pavex::methods` (in Nightly builds, run with -Z macro-backtrace for more info)
